# tushare-models

./: LICENSE  README.md  meta.db  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_models.py
src/tushare_models/: __init__.py  adj_factor.py  anns_d.py  bak_basic.py  bak_daily.py  balancesheet.py  bc_bestotcqt.py  bc_otcqt.py  bishijie.py  block_trade.py  bo_cinema.py  bo_daily.py  bo_monthly.py  bo_weekly.py  bond_blk.py  bond_blk_detail.py  broker_recommend.py  bse_mapping.py  btc8.py  btc_marketcap.py  btc_pricevol.py  cashflow.py  cb_basic.py  cb_call.py  cb_daily.py  cb_factor_pro.py  cb_issue.py  cb_price_chg.py  cb_rate.py  cb_share.py  ccass_hold.py  ccass_hold_detail.py  cctv_news.py  ci_daily.py  ci_index_member.py  cn_cpi.py  cn_gdp.py  cn_m.py  cn_pmi.py  cn_ppi.py  (+205 more)
src/tushare_models/core/: __init__.py  base.py  dialect.py  dml.py  func.py  types.py
