[project]
name = "tushare-models"
version = "0.0.1"
description = "Tushare SQLAlchemy Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"clickhouse-sqlalchemy>=0.3.2",
"sqlalchemy>=2.0.38",
"starrocks>=1.2.1",
"databend-sqlalchemy>=0.5.0",
]
authors = [{ name = "zhangbingchen", email = "1731259685@qq.com" }]
license = { text = "MIT" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"
