[project]
name = "tushare-models"
version = "0.1.1"
description = "Tushare SQLAlchemy Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sqlalchemy>=2.0.38"]
authors = [{ name = "zhangbingchen", email = "1731259685@qq.com" }]
license = { text = "MIT" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[project.optional-dependencies]
clickhouse = ["clickhouse-sqlalchemy>=0.3.2"]
starrocks = ["starrocks>=1.2.1"]
databend = ["databend-sqlalchemy>=0.5.0"]
all = [
"clickhouse-sqlalchemy>=0.3.2",
"starrocks>=1.2.1",
"databend-sqlalchemy>=0.5.0",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[dependency-groups]
dev = ["black>=25.9.0", "isort>=7.0.0"]
